--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-debug-toolbar
 django-phone-field
 django-mptt
 django-view-breadcrumbs
+django_extensions
 psycopg2>=2.7.0.0,<3.0.0.0
 whitenoise
 pillow
