psycopg2 version limitation

--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ django-phone-field = "*"
 django-mptt = "*"
 django-view-breadcrumbs = "*"
 django-extensions = "*"
-psycopg2 ="*"
+psycopg2 ="<3.0.0.0,>=2.7.0.0"
 whitenoise = "*"
 pillow = "*"
 legacy-cgi = "*"
